# AdventOfCode2022

./: pyproject.toml
2022/day01/: Cargo.toml  day01.py
2022/day01/src/: main.rs
2022/day02/: day02.py
2022/day03/: day03.py
2023/day01/: a.go  b.go
2023/day02/: a.go  b.go
2023/day03/: a.go  b.go
2023/day04/: a.go  b.go
2023/day05/: a.go  b.go
2023/day06/: a.go  b.go
2023/day07/: a.go  b.go
2023/day08/: a.go  b.go
2023/day09/: a.go  b.go
2023/day10/: a.go  b.go
2023/day11/: a.go  b.go
day01/: day01.py
